--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         'Phoenix – Drone Incendie',
                         '<strong>1st Prize - Ecole Polytechnique</strong><br><br><strong>Team:</strong> Adam Arzouni, Emilie Huynh, Jean-Christophe Fronteddu, Louis St-Laurent, Marc Alexandre Savard.<br><br><strong>Description:</strong> Phoenix is a lightweight rescue drone designed to evacuate injured people trapped in forest fires. The drone’s structure is engineered to be fire-resistant, sealed, and lightweight (300g).<br><br><strong>Objectives:</strong> Design a drone capable of rescuing injured people from forest fires. Ensure the structure is lightweight, sealed, and fire-resistant.', 
                         '<strong>1er Prix - École Polytechnique</strong><br><br><strong>Équipe :</strong> Adam Arzouni, Emilie Huynh, Jean-Christophe Fronteddu, Louis St-Laurent, Marc Alexandre Savard.<br><br><strong>Description :</strong> Phoenix est un drone de sauvetage léger conçu pour évacuer les blessés des feux de forêt. La structure est résistante au feu, étanche et légère.<br><br><strong>Objectifs :</strong> Concevoir un drone de sauvetage résistant au feu et léger.',
-                        '#', 
+                        'documents/Assemblage.pdf', 
                         ['images/PI1.jpg', 'images/IMG_5254_mp4.mp4', 'images/PI11.jpg', 'images/PI12.jpg', 'images/PI19.jpg', 'images/team before after.jpg'], 
                         [
                             {nameEn: 'Assembly PDF', nameFr: 'Assemblage PDF', url: 'documents/Assemblage.pdf', protected: true},
@@ -214,12 +214,52 @@
                     <div class="card-overlay"></div>
                     <div class="card-content">
                         <h3 class="en">Phoenix Drone</h3><h3 class="fr">Drone Phoenix</h3>
-                        <p class="en">1st Prize Fire Rescue</p><p class="fr">1er Prix Sauvetage</p>
-                        <span class="click-hint"><i class="fas fa-lock"></i> Restricted</span>
+                        <p class="en">1st Prize Winner</p><p class="fr">Gagnant 1er Prix</p>
+                        <span class="click-hint"><i class="fas fa-plus"></i> <span class="en">Click for Details</span><span class="fr">Voir Détails</span></span>
                     </div>
                 </div>
 
-                <div class="bento-item" style="background-image: url('images/riaupel-main.jpg');"
+                <div class="bento-item" style="background-image: url('images/PI3.jpg');"
+                     onclick="openModal(
+                        'SleepSafe – Smart Baby Monitor', 
+                        'SleepSafe – Moniteur Bébé',
+                        '<strong>Client:</strong> New Parents<br><strong>Team:</strong> Adam Arzouni<br><br><strong>Description:</strong> Development of a smart baby-monitoring device that controls bedroom lighting and detects a child’s movement. Connects to Wi-Fi and communicates with Amazon Alexa.<br><br><strong>Objectives:</strong> Develop a smart system to monitor a child’s sleep environment, detect movement, and send alerts via Alexa.', 
+                        '<strong>Client :</strong> Nouveaux Parents<br><strong>Équipe :</strong> Adam Arzouni<br><br><strong>Description :</strong> Développement d\'un dispositif intelligent de surveillance pour bébé qui contrôle l\'éclairage et détecte les mouvements. Se connecte au Wi-Fi et communique avec Alexa.<br><br><strong>Objectifs :</strong> Développer un système intelligent pour surveiller le sommeil et envoyer des alertes.',
+                        'documents/Détection de mouvement pour une chambre d’enfant.pdf', 
+                        ['images/PI3.jpg', 'images/PI3 (2).jpg', 'images/CATIA.PNG'], 
+                        [
+                            {nameEn: 'Movement Detection Report', nameFr: 'Rapport Détection', url: 'documents/Détection de mouvement pour une chambre d’enfant.pdf', protected: true}
+                        ]
+                    )">
+                    <div class="card-overlay"></div>
+                    <div class="card-content">
+                        <h3 class="en">SleepSafe Monitor</h3><h3 class="fr">Moniteur SleepSafe</h3>
+                        <p>Smart Baby Monitoring</p>
+                        <span class="click-hint"><i class="fas fa-plus"></i> <span class="en">Click for Details</span><span class="fr">Voir Détails</span></span>
+                    </div>
+                </div>
+
+                <div class="bento-item" style="background-image: url('images/pi23.jpg');"
+                     onclick="openModal(
+                        'Autonomous Delivery Robot', 
+                        'Robot Livreur Autonome',
+                        '<strong>Client:</strong> CEM5102<br><strong>Team:</strong> Tania Araujo Domingues, Adam Arzouni, Tristan Doyle, El Hadj Keita, Yassine Rafi, Hamza Rahmani.<br><br><strong>Description:</strong> Design and development of an autonomous delivery robot capable of performing transport tasks without human intervention. Inspired by pandemic constraints.<br><br><strong>Objectives:</strong> Design and build an autonomous delivery robot. Enable navigation without human control. Optimize mechanical design.', 
+                        '<strong>Client :</strong> CEM5102<br><strong>Équipe :</strong> Tania Araujo Domingues, Adam Arzouni, Tristan Doyle, El Hadj Keita, Yassine Rafi, Hamza Rahmani.<br><br><strong>Description :</strong> Conception et développement d\'un robot livreur autonome capable d\'effectuer des tâches de transport sans intervention humaine.<br><br><strong>Objectifs :</strong> Concevoir et construire un robot livreur autonome. Permettre la navigation sans contrôle humain.',
+                        'documents/Le-projet-coursier.1.pdf', 
+                        ['images/pi23.jpg', 'images/pi2.mp4', 'images/pi22.mp4', 'images/pi25.mp4', 'images/pi24.jpg', 'images/pi26.jpg', 'images/pi27.png', 'images/pi28.png'], 
+                        [
+                            {nameEn: 'Course Project Report', nameFr: 'Rapport de Projet', url: 'documents/Le-projet-coursier.1.pdf', protected: true}
+                        ]
+                    )">
+                    <div class="card-overlay"></div>
+                    <div class="card-content">
+                        <h3 class="en">Delivery Robot</h3><h3 class="fr">Robot Livreur</h3>
+                        <p>Autonomous Logistics</p>
+                        <span class="click-hint"><i class="fas fa-plus"></i> <span class="en">Click for Details</span><span class="fr">Voir Détails</span></span>
+                    </div>
+                </div>
+
+                <div class="bento-item wide" style="background-image: url('images/riaupel-main.jpg');"
                      onclick="openModal(
                         'RIAUPEL Energy Connector', 
                         'Connecteur Énergie RIAUPEL', 
@@ -235,47 +275,25 @@
                     <div class="card-content">
                         <h3 class="en">Robot Energy Connector</h3><h3 class="fr">Connecteur Énergie Robot</h3>
                         <p>Hydro-Quebec/IREQ</p>
-                        <span class="click-hint"><i class="fas fa-lock"></i> Restricted</span>
+                        <span class="click-hint"><i class="fas fa-plus"></i> <span class="en">Click for Details</span><span class="fr">Voir Détails</span></span>
                     </div>
                 </div>
 
-                <div class="bento-item" style="background-image: url('images/pi24.jpg');"
+                <div class="bento-item" style="background-image: url('images/tizen-main.jpg');"
                      onclick="openModal(
-                        'Autonomous Delivery Robot', 
-                        'Robot Livreur Autonome',
-                        '<strong>Client:</strong> CEM5102<br><strong>Team:</strong> Tania Araujo Domingues, Adam Arzouni, Tristan Doyle, El Hadj Keita, Yassine Rafi, Hamza Rahmani.<br><br><strong>Description:</strong> Design and development of an autonomous delivery robot capable of performing transport tasks without human intervention. Inspired by pandemic constraints.<br><br><strong>Objectives:</strong> Design and build an autonomous delivery robot. Enable navigation without human control. Optimize mechanical design.', 
-                        '<strong>Client :</strong> CEM5102<br><strong>Équipe :</strong> Tania Araujo Domingues, Adam Arzouni, Tristan Doyle, El Hadj Keita, Yassine Rafi, Hamza Rahmani.<br><br><strong>Description :</strong> Conception et développement d\'un robot livreur autonome capable d\'effectuer des tâches de transport sans intervention humaine.<br><br><strong>Objectifs :</strong> Concevoir et construire un robot livreur autonome. Permettre la navigation sans contrôle humain.',
+                        'Tizen App Creation', 
+                        'Création d\'App Tizen',
+                        '<strong>Technology:</strong> Tizen OS, C++, Samsung Wearables<br><br><strong>Description:</strong> Design and development of a custom application for Tizen-based wearable devices. Focus on user interface optimization and sensor integration.', 
+                        '<strong>Technologie :</strong> Tizen OS, C++, Samsung Wearables<br><br><strong>Description :</strong> Conception et développement d\'une application personnalisée pour les appareils portables Tizen. Accent sur l\'optimisation de l\'interface utilisateur et l\'intégration des capteurs.',
                         '#', 
-                        ['images/pi23.jpg', 'images/pi2.mp4', 'images/pi22.mp4', 'images/pi25.mp4', 'images/pi24.jpg', 'images/pi26.jpg', 'images/pi27.png', 'images/pi28.png'], 
-                        [
-                            {nameEn: 'Course Project Report', nameFr: 'Rapport de Projet', url: 'documents/Le-projet-coursier.1.pdf', protected: true}
-                        ]
+                        ['images/tizen-main.jpg'], 
+                        []
                     )">
                     <div class="card-overlay"></div>
                     <div class="card-content">
-                        <h3 class="en">Delivery Robot</h3><h3 class="fr">Robot Livreur</h3>
-                        <p>Autonomous Logistics</p>
-                        <span class="click-hint"><i class="fas fa-lock"></i> Restricted</span>
-                    </div>
-                </div>
-
-                <div class="bento-item wide" style="background-image: url('images/PI3.jpg');"
-                     onclick="openModal(
-                        'SleepSafe – Smart Baby Monitor', 
-                        'SleepSafe – Moniteur Bébé',
-                        '<strong>Client:</strong> New Parents<br><strong>Team:</strong> Adam Arzouni<br><br><strong>Description:</strong> Development of a smart baby-monitoring device that controls bedroom lighting and detects a child’s movement. Connects to Wi-Fi and communicates with Amazon Alexa.<br><br><strong>Objectives:</strong> Develop a smart system to monitor a child’s sleep environment, detect movement, and send alerts via Alexa.', 
-                        '<strong>Client :</strong> Nouveaux Parents<br><strong>Équipe :</strong> Adam Arzouni<br><br><strong>Description :</strong> Développement d\'un dispositif intelligent de surveillance pour bébé qui contrôle l\'éclairage et détecte les mouvements. Se connecte au Wi-Fi et communique avec Alexa.<br><br><strong>Objectifs :</strong> Développer un système intelligent pour surveiller le sommeil et envoyer des alertes.',
-                        '#', 
-                        ['images/PI3.jpg', 'images/PI3 (2).jpg', 'images/CATIA.PNG'], 
-                        [
-                            {nameEn: 'Movement Detection Report', nameFr: 'Rapport Détection', url: 'documents/Détection de mouvement pour une chambre d’enfant.pdf', protected: true}
-                        ]
-                    )">
-                    <div class="card-overlay"></div>
-                    <div class="card-content">
-                        <h3 class="en">SleepSafe Monitor</h3><h3 class="fr">Moniteur SleepSafe</h3>
-                        <p>Smart Baby Monitoring</p>
-                        <span class="click-hint"><i class="fas fa-lock"></i> Restricted</span>
+                        <h3 class="en">Tizen App Creation</h3><h3 class="fr">Création App Tizen</h3>
+                        <p>Wearable Development</p>
+                        <span class="click-hint"><i class="fas fa-plus"></i> <span class="en">Click for Details</span><span class="fr">Voir Détails</span></span>
                     </div>
                 </div>
 
@@ -293,6 +311,7 @@
                     <div class="card-content">
                         <h3 class="en">Rotary Phone</h3><h3 class="fr">Téléphone Rotatif</h3>
                         <p class="en">Audio Guestbook</p><p class="fr">Livre d'Or Audio</p>
+                        <span class="click-hint"><i class="fas fa-plus"></i> <span class="en">Click for Details</span><span class="fr">Voir Détails</span></span>
                     </div>
                 </div>
 
@@ -364,4 +383,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
