--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     </div>
                 </div>
 
-                <div class="bento-item" style="background-image: url('images/phone_main.jpg');"
+                <div class="bento-item" style="background-image: url('images/wedding1.jpg');"
                      onclick="openModal(
                         'Wedding Rotary Phone', 
                         'Téléphone Rotatif de Mariage',
@@ -383,4 +383,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
