--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     </div>
                 </div>
 
-                <div class="bento-item" style="background-image: url('images/phone_main.jpg');" onclick="openProject('phone')">
+                <div class="bento-item" style="background-image: url('images/wedding1.jpg');" onclick="openProject('phone')">
                     <div class="card-overlay"></div>
                     <div class="card-content">
                         <h3 class="en">Rotary Phone</h3><h3 class="fr">Téléphone Rotatif</h3>
@@ -308,7 +308,7 @@
                         <p id="m-desc-fr" class="fr">Description...</p>
                     </div>
                     <a id="m-link" href="#" target="_blank" class="github-btn">
-                        <i class="fas fa-external-link-alt"></i> <span class="en">View Project</span><span class="fr">Voir Projet</span>
+                        <i class="fas fa-external-link-alt"></i> <span class="en">View Code / Link</span><span class="fr">Voir Code / Lien</span>
                     </a>
                 </div>
             </div>
