--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adam Arzouni | Mechanical Engineer</title>
     
-    <link rel="icon" type="image/png" href="images/logo-dark.png">
+    <link rel="icon" type="image/png" href="images/logo-light.png">
     
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -320,3 +320,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
