--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     </div>
                 </div>
 
-                <div class="bento-item" style="background-image: url('images/tizen-main.jpg');" onclick="openProject('tizen')">
+                <div class="bento-item" style="background-image: url('images/Tizen.png');" onclick="openProject('tizen')">
                     <div class="card-overlay"></div>
                     <div class="card-content">
                         <h3 class="en">Tizen App Creation</h3><h3 class="fr">Création App Tizen</h3>
@@ -320,4 +320,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
