--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H2DSCGF9C7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-H2DSCGF9C7');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adam Arzouni | Mechanical Engineer</title>
@@ -234,7 +243,7 @@
                     </div>
                 </div>
 
-                <div class="bento-item" style="background-image: url('images/Tizen.png');" onclick="openProject('tizen')">
+                <div class="bento-item" style="background-image: url('images/tizen-main.jpg');" onclick="openProject('tizen')">
                     <div class="card-overlay"></div>
                     <div class="card-content">
                         <h3 class="en">Tizen App Creation</h3><h3 class="fr">Création App Tizen</h3>
@@ -320,5 +329,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
